--- a/web/.htaccess
+++ b/web/.htaccess
@@ -1,16 +1,4 @@
-php_flag output_buffering On
-php_flag display_errors off
-Options +FollowSymLinks
-IndexIgnore /
 RewriteEngine on
-RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule . index.php
-<IfModule mod_headers.c>
-Header always set Content-Security-Policy: upgrade-insecure-requests
-Header set Access-Control-Max-Age 1728000
-Header set Access-Control-Allow-Origin: "*"
-Header set Access-Control-Allow-Credentials: "true"
-Header set Access-Control-Allow-Methods: "GET,HEAD,OPTIONS,POST,PUT"
-Header set Access-Control-Allow-Headers: "Access-Control-Allow-Headers, Origin,Accept, X-Requested-With, Content-Type, Access-Control-Request-Method, Access-Control-Request-Headers"
-</IfModule>
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteRule . index.php [L]
